# ls-tui

./: .gitignore  Cargo.toml  README.md
src/: dir_list.rs  main.rs
