[package]
name = "ls-tui"
version = "0.1.0"
authors = ["Andrew Alsup"]
edition = "2021"
repository = "https://github.com/aalsup/ls-tui"

[[bin]]
name = "lt"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19.0"
crossterm = "0.26.1"
clap = { version = "4.2.4", features = ["derive"] }
byte-unit = "4.0.19"
unix_permissions_ext = "0.1.2"
users = "0.11.0"
tree_magic_mini = "3.0.3"
opener = "0.6.1"
thiserror = "1.0.40"
fs_extra = "1.3.0"
notify = "5.1.0"
tokio = { version = "1.27.0", features = ["full"] }
