[package]
name = "ls-tui"
version = "0.1.0"
authors = ["Andrew Alsup"]
edition = "2021"
repository = "https://github.com/aalsup/ls-tui"

[[bin]]
name = "lsls"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19.0"
crossterm = "0.27.0"
clap = { version = "4.5.0", features = ["derive"] }
byte-unit = "5.1.4"
unix_permissions_ext = "0.1.2"
users = "0.11.0"
tree_magic_mini = "3.0.3"
opener = "0.6.1"
thiserror = "1.0.57"
anyhow = "1.0.79"
fs_extra = "1.3.0"
notify = "6.1.1"
# tokio = { version = "1.28.0", features = ["full"] }
itertools = "0.12.1"
log = "0.4.20"
env_logger = "0.11.1"
log4rs = "1.3.0"
chrono = "0.4.34"
retry = "2.0.0"