[package]
name = "ls-tui"
version = "0.1.0"
authors = ["Andrew Alsup"]
edition = "2021"
repository = "https://github.com/aalsup/ls-tui"

[[bin]]
name = "lsls"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"
clap = { version = "4.6.0", features = ["derive"] }
byte-unit = "5.2.0"
unix_permissions_ext = "0.1.2"
users = "0.11.0"
tree_magic_mini = "3.2.2"
opener = "0.8.4"
thiserror = "2.0.18"
anyhow = "1.0.102"
fs_extra = "1.3.0"
notify = "9.0.0-rc.2"
# tokio = { version = "1.28.0", features = ["full"] }
itertools = "0.14.0"
log = "0.4.29"
log4rs = "1.4.0"
chrono = "0.4.44"
retry = "2.2.0"